--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 
   <!-- FULLSCREEN ZOOM OVERLAY -->
   <div class="image-overlay" id="imageOverlay">
-    <img src="/assets/profile-photo.png" alt="">
+    <img src="assets/profile-photo.png" alt="">
   </div>
 
   <div class="page">
@@ -277,7 +277,7 @@
     <!-- Кнопка скачивания PDF -->
     <!-- Поменяй href на реальный путь к твоему PDF -->
     <div class="download-wrapper">
-      <a class="download-btn" href="/assets/xeyyam-mustafayev-cv.pdf" download>
+      <a class="download-btn" href="assets/xeyyam-mustafayev-cv.pdf" download>
         Download PDF
       </a>
     </div>
@@ -290,7 +290,7 @@
         <div class="sidebar-top">
           <div class="profile-photo" id="profilePhoto">
             <span class="zoom-icon">🔍</span>
-            <img src="/assets/profile-photo.png" alt="Profile photo">
+            <img src="assets/profile-photo.png" alt="Profile photo">
           </div>
 
           <div class="name">Xəyyam Mustafayev</div>
@@ -316,7 +316,7 @@
         </section>
 
         <div class="sidebar-flutter-logo">
-          <img src="/assets/logo-flutter.png" alt="Flutter logo">
+          <img src="assets/logo-flutter.png" alt="Flutter logo">
         </div>
 
         <section class="sidebar-section">
