--- a/index.html
+++ b/index.html
@@ -374,9 +374,8 @@
           <div>
             <div class="exp-company">Rain+ MMC</div>
             <div class="exp-role">İT üzrə Mütəxəssis</div>
-            <div class="exp-dates">August 2021 – Present</div>
+            <div class="exp-dates"><b>August 2021 – Present</b></div>
 
-            <p class="exp-period">August 2021 - Present</p>
 
             <ul>
               <li>Built responsive UI in Flutter using SOLID principles and MVVM/MVC architecture.</li>
