--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-  <link rel="icon" href="/assets/favicon-dart.svg" type="image/svg+xml">
+  <link rel="icon" href="https://xeyyamit-web.github.io/xeyyam-mustafayev-cv/assets/favicon-dart.svg" type="image/svg+xml">
   
   <style>
     * {
